<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/AbsoluteLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back" >

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="118dp"
        android:layout_y="555dp"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/txtIngresos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="40dp"
        android:layout_y="575dp"
        android:text="@string/txtingresos" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="118dp"
        android:layout_y="495dp"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/txtcanon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="40dp"
        android:layout_y="510dp"
        android:text="@string/txtCanon" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="118dp"
        android:layout_y="425dp"
        android:ems="10" />

    <TextView
        android:id="@+id/txtInmueble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="40dp"
        android:layout_y="445dp"
        android:text="@string/txtInmueble" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="118dp"
        android:layout_y="355dp"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/txtTel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="40dp"
        android:layout_y="375dp"
        android:text="@string/txtTel" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="118dp"
        android:layout_y="290dp"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/txtNumDoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="40dp"
        android:layout_y="305dp"
        android:text="@string/txtnumDoc" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:layout_x="118dp"
        android:layout_y="210dp" />

    <TextView
        android:id="@+id/txtTipoDoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="40dp"
        android:layout_y="230dp"
        android:text="@string/txtTipoDoc" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="118dp"
        android:layout_y="150dp"
        android:ems="10" />

    <TextView
        android:id="@+id/txtApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="40dp"
        android:layout_y="165dp"
        android:text="@string/txtApell" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="118dp"
        android:layout_y="78dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="40dp"
        android:layout_y="96dp"
        android:text="@string/txtName" />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_x="190dp"
        android:layout_y="615dp"
        android:text="@string/btnEnviar" />

</AbsoluteLayout>
